fix description overflow

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -379,6 +379,10 @@ main {
   max-height: 85px;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  line-clamp: 4;
   
 }
 
